# GaussRegular

./: .gitattributes  .gitignore  LICENSE  README.md  meson.build  meson_options.txt  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: build_wheels.yml
src/gaussregular/: __init__.py  _core.c  api.py  gauss2regular.f90
