[build-system]
requires = ["setuptools>=69", "wheel", "numpy>=1.23"]
build-backend = "setuptools.build_meta"

[project]
name = "gaussregular"
version = "0.1.3"
description = "ECMWF reduced Gaussian (N/O) to regular Gaussian in-memory converter"
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.9"
authors = [{ name = "Qianye Su", email = "976113615@qq.com" }]
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
xarray = ["xarray>=2023.1", "cfgrib>=0.9.10"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
